Array : Find Minimum and Maximum number Find missing number